hotfix: revert z-index CSS change from the hotfix yesterday; update the Bolt video player Twig config to manually disable the resizeManager option in Brightcove. Addresses the Safari for iOS issue in production with background-embedded video player preventing UI elements on top from being interacted with.

--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -27,7 +27,7 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
   &[is-background-video]{
     flex-grow: 1;
-    // note: defining a z-index here causes strange behavior in Safari for iOS with buttons no longer accepting click events as expected.
+    z-index: 20;
     transition: opacity .3s ease, min-height .3s ease;
     top: 0;
     right: 0;
